--- a/index.html
+++ b/index.html
@@ -5,27 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Elizabeth Betson</title>
+    <link rel="stylesheet" type ="text/css" href="./css/main.css" href="./css/normalize.css" />
+    <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet"/>
 </head>
-<body>
-    <header>
-            <div>About Me</div>
-            <ul>
-                <li><a href="">About Me</a></li>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Contact</a></li>
-            </ul>
+<body class="body">  
+    <header class="header">
+        <div class="header-logo">Elizabeth Betson</div>
+            
+  <nav>
+                <a href="./about.html">About</a>
+                <a href="./portfolio.html">Portfolio</a>
+                <a href="./contact.html">Contact</a>
+            </nav>
         </header>
 
-        <section>
-            <div>
-                <div>Elizabeth Betson</div>
-                <div>I like pina coladas and getting caught in the rain.</div>
+        <section class="section-main">
+                <div class="section-content">
+                <div class="about-me">
+                <p>About Me</p>
+                <div class="liz-border">
+                <img src="./img/liz.jpg" class="portfolio-image"/>
+                <div class="about-section">
+                <p>Despite growing up in rural Kansas--that type of town where the cows outnumber the folks--I've always thought a little outside of the Bermuda Rectangle.  After traveling around the world as an international model, I returned to my Midwest roots to earn my Bachelor of Science in both Honors Biology and Psychology from DePaul University in Chicago.</p>
+                <p>After five years as a laser and medical device sales savant, I realized:  machines are a lot more interesting than [most] humans.</p>
+                <p>Now, I have realized my passion in building better worlds that marry science, education, and tech into one saucy little stack.  I currently handle all-things-geek for The Eco Preservation Project, a nonprofit geared toward Florida nature conservation and sustainable farming techniques.  Hey, you can take the girl out of Kansas...</p>
+            </div>
             </section>
 
-            <footer>
-                <span>Copyright 2019</span>
+            <footer class="footer">
+                <div>Copyright 2019</div>
             </footer>
-        </section>
-    </header>
 </body>
 </html>
